k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            # points to database-persistent-volume-claim.yaml
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            # Once the volume is mounted by k8s, tell the container to use it
            - name: postgres-storage
              # Specify where exactly to save data in the volume
              mountPath: /var/lib/postgresql/data
              # Postgres specific setup - store all data under postgres directory within mountpath
              subPath: postgres
